Correctly handle a style change reflow on a subtree that has placeholders with out of flows outside that subtree.  (Bug 363247)  r+sr=bzbarsky